k3s/cluster/apps/longhorn-backed/firefly/workload/service-mariadb.yaml
apiVersion: v1
kind: Service
metadata:
  name: mariadb
  namespace: firefly
  labels:
    app.kubernetes.io/name: mariadb
    app.kubernetes.io/component: database
spec:
  clusterIP: None
  selector:
    app.kubernetes.io/name: mariadb
    app.kubernetes.io/component: database
  ports:
    - name: mysql
      port: 3306
      targetPort: mysql
