k3s/cluster/apps/longhorn-backed/firefly/workload/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: firefly
  namespace: firefly
  labels:
    app.kubernetes.io/name: firefly
    app.kubernetes.io/component: app
spec:
  ingressClassName: traefik
  rules:
    - host: finances.dege.app
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: firefly
                port:
                  number: 80
